--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
     rel="stylesheet"
   />
+
   <body>
     <div id="scrollup" class="list">
       <a href="#">
@@ -175,10 +176,12 @@
           </ul>
           <ul class="links">
             <h3>Socials</h3>
-            <i class="ri-instagram-line"></i>
-            <i class="ri-facebook-line"></i>
-            <i class="ri-pinterest-line"></i>
-            <i class="ri-twitter-line"></i>
+            <a target="_blank" href="https://www.instagram.com/ianuragdwivedi/">
+              <i class="ri-instagram-line"></i>
+            </a>
+            <a target="_blank" href="https://github.com/anuragdwi">
+              <i class="ri-github-line"></i>
+            </a>
           </ul>
         </div>
       </div>
