--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
         <i id="ham" class="ri-menu-3-line"></i>
         <ul id="menu">
           <i id="close" class="ri-close-fill"></i>
-          <li><a href=""> Home </a></li>
-          <li><a href="#about"> About Us </a></li>
-          <li><a href="#subscribe"> Subcription </a></li>
-          <li><a href="#gallery"> Gallery </a></li>
+          <li><a onclick="remove()" href=""> Home </a></li>
+          <li>
+            <a onclick="remove()" href="#about"> About Us </a>
+          </li>
+          <li><a onclick="remove()" href="#subscribe"> Subcription </a></li>
+          <li><a onclick="remove()" href="#gallery"> Gallery </a></li>
           <!-- <li><a href=""> Sign Up </a></li>
           <li><a href=""> Log In </a></li> -->
         </ul>
