--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
         <div class="right">
           <ul class="links">
             <h3>Links</h3>
-            <li><a href=""> Home </a></li>
-            <li><a href=""> About Us </a></li>
-            <li><a href=""> Subcription </a></li>
-            <li><a href=""> Gallery </a></li>
+            <li><a href="#"> Home </a></li>
+            <li><a href="#about"> About Us </a></li>
+            <li><a href="#subscribe"> Subcription </a></li>
+            <li><a href="#gallery"> Gallery </a></li>
           </ul>
           <ul class="links">
             <h3>Socials</h3>
